@@ -19,42 +19,52 @@ package de.gematik.test.tiger.proxy.handler;
 import static org.mockserver.model.Header.header;
 import de.gematik.test.tiger.common.data.config.tigerProxy.TigerRoute;
 import de.gematik.test.tiger.proxy.TigerProxy;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.mockserver.model.HttpRequest;
+import org.mockserver.model.NottableString;
 
 @Slf4j
 public class ForwardProxyCallback extends AbstractTigerRouteCallback {
 
-    private final URI targetUri;
+    private final URL targetUrl;
+    private final URL sourceUrl;
     private final int port;
+    private final boolean addTrailingSlash;
 
-    @SneakyThrows(URISyntaxException.class)
+    @SneakyThrows(MalformedURLException.class)
     public ForwardProxyCallback(TigerProxy tigerProxy, TigerRoute tigerRoute) {
         super(tigerProxy, tigerRoute);
-        targetUri = new URI(tigerRoute.getTo());
-        if (targetUri.getPort() < 0) {
+        if (tigerRoute.getTo().endsWith("/")) {
+            targetUrl = new URL(tigerRoute.getTo().substring(0, tigerRoute.getTo().length() - 1));
+            addTrailingSlash = true;
+        } else {
+            targetUrl = new URL(tigerRoute.getTo());
+            addTrailingSlash = false;
+        }
+        sourceUrl = new URL(tigerRoute.getFrom());
+        if (targetUrl.getPort() < 0) {
             port = tigerRoute.getTo().startsWith("https://") ? 443 : 80;
         } else {
-            port = targetUri.getPort();
+            port = targetUrl.getPort();
         }
-        tigerProxy.addAlternativeName(new URI(tigerRoute.getFrom()).getHost());
+        tigerProxy.addAlternativeName(sourceUrl.getHost());
     }
 
     @Override
     public HttpRequest handleRequest(HttpRequest req) {
         applyModifications(req);
-        req.replaceHeader(header("Host", targetUri.getHost() + ":" + port));
+        req.replaceHeader(header("Host", targetUrl.getHost() + ":" + port));
         if (getTigerRoute().getBasicAuth() != null) {
             req.replaceHeader(
                 header("Authorization",
                     getTigerRoute().getBasicAuth().toAuthorizationHeaderValue()));
         }
         final String path = req.getPath().toString().equals("/") ?
-            targetUri.getPath()
-            : targetUri.getPath() + req.getPath();
+            targetUrl.getPath() + "/"
+            : targetUrl.getPath() + req.getPath();
         return cloneRequest(req)
             .withPath(path)
             .withSecure(getTigerRoute().getTo().startsWith("https://"))
@@ -63,6 +73,6 @@ public class ForwardProxyCallback extends AbstractTigerRouteCallback {
 
     @Override
     protected String extractProtocolAndHostForRequest(HttpRequest request) {
-        return getTigerRoute().getFrom();
+        return sourceUrl.getProtocol() + "://" + sourceUrl.getHost();
     }
 }
